WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286324
ciso646:46:4: warning: "<ciso646> is deprecated in C++17, use <version> to detect implementation-specific macros" [-W#warnings]
https://bugs.webkit.org/show_bug.cgi?id=286324
Summary
ciso646:46:4: warning: "<ciso646> is deprecated in C++17, use <version> to de...
Michael Catanzaro
Reported
2025-01-21 14:34:58 PST
When building with libstdc++, we have a warning spam: In file included from /builddir/build/BUILD/webkitgtk-2.47.3-build/webkitgtk-2.47.3/Source/WebCore/PAL/pal/text/TextCodecICU.cpp:27: In file included from /builddir/build/BUILD/webkitgtk-2.47.3-build/webkitgtk-2.47.3/Source/WebCore/PAL/config.h:39: /usr/bin/../lib/gcc/x86_64-redhat-linux/15/../../../../include/c++/15/ciso646:46:4: warning: "<ciso646> is deprecated in C++17, use <version> to detect implementation-specific macros" [-W#warnings] 46 | # warning "<ciso646> is deprecated in C++17, use <version> to detect implementation-specific macros" | ^ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2025-01-21 14:39:00 PST
Found
https://en.cppreference.com/w/cpp/header/ciso646
which says:
> Prior to C++20, including <ciso646> was sometimes used as a technique for obtaining definitions of implementation-specific library version macros without causing other effects. As of C++20, the header <version> was added for this purpose.
I think that's what we're using it for, so let's switch to <version> instead. If this fails on PlayStation EWS, then we can try guarding it behind __has_include().
Michael Catanzaro
Comment 2
2025-01-23 13:58:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39464
EWS
Comment 3
2025-02-01 06:32:55 PST
Committed
289666@main
(403fba703947): <
https://commits.webkit.org/289666@main
> Reviewed commits have been landed. Closing PR #39464 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug