ciso646:46:4: warning: "<ciso646> is deprecated in C++17, use <version> to detect implementation-specific macros" [-W#warnings] https://bugs.webkit.org/show_bug.cgi?id=286324

Reviewed by NOBODY (OOPS!).

The purpose of this header is to access macros like __GLIBC__. Let's
just use the header that the warning message suggests.

* Source/WebCore/PAL/config.h:
* Source/WebCore/config.h: